csi-proxmox/csi-proxmox/proxmox-csi-plugin-dashboard.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-csi-plugin-dashboard
  namespace: csi-proxmox
spec:
  selector:
    app.kubernetes.io/name: proxmox-csi-plugin
    app.kubernetes.io/instance: proxmox-csi-plugin
    app.kubernetes.io/component: controller
  ports:
    - name: dashboard
      port: 8088
      targetPort: dashboard
...
