csi-proxmox/csi-proxmox/proxmox-csi-plugin-dashboard.ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-csi-plugin-dashboard
  namespace: csi-proxmox
  annotations:
    link.argocd.argoproj.io/external-link: "https://proxmox-csi-plugin-dashboard.argocd-k3s-test.panzer1119.de"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`proxmox-csi-plugin-dashboard.argocd-k3s-test.panzer1119.de`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
        - name: local-only
          namespace: traefik
      services:
        - name: proxmox-csi-plugin-dashboard
          port: 8088
...
